<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.MainActivity">

    <TextView
        android:id="@+id/now_playing"
        style="@style/ActivityStyle"
        android:background="@color/now_playing_color"
        android:text="@string/now_playing_activity"/>

    <TextView
        android:id="@+id/search"
        style="@style/ActivityStyle"
        android:background="@color/search_color"
        android:text="@string/search_activity"/>

    <TextView
        android:id="@+id/list"
        style="@style/ActivityStyle"
        android:background="@color/list_color"
        android:text="@string/list_activity"/>
</LinearLayout>
