<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.SearchActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/list"
                style="@style/ButtonStyle"
                android:text="@string/list_activity"
                android:background="@color/list_color"/>

            <Button
                android:id="@+id/main"
                style="@style/ButtonStyle"
                android:text="@string/app_name"
                android:background="@color/colorPrimary"/>

            <Button
                android:id="@+id/now_playing"
                style="@style/ButtonStyle"
                android:text="@string/now_playing_activity"
                android:background="@color/now_playing_color"/>

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_explanation"/>

</LinearLayout>
